pkg/kgateway/setup/testdata/standard/lambda-multiple-functions-out.yaml
clusters:
- clusterType:
    name: envoy.clusters.dns
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
      allAddressesInSingleEndpoint: true
      dnsLookupFamily: V4_PREFERRED
  connectTimeout: 5s
  loadAssignment:
    clusterName: backend_gwtest_lambda-auth-backend_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: lambda.us-west-2.amazonaws.com
              portValue: 443
  name: backend_gwtest_lambda-auth-backend_0
  transportSocket:
    name: envoy.transport_sockets.tls
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      sni: lambda.us-west-2.amazonaws.com
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      commonHttpProtocolOptions:
        idleTimeout: 30s
      explicitHttpConfig:
        http2ProtocolOptions: {}
      httpFilters:
      - name: envoy.filters.http.aws_lambda
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.Config
          arn: arn:aws:lambda:us-west-2:000000000000:function:auth-service:$LATEST
          hostRewrite: lambda.us-west-2.amazonaws.com
      - name: envoy.filters.http.aws_request_signing
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
          credentialProvider:
            inlineCredential:
              accessKeyId: AKIAIOSFODNN7EXAMPLE
              secretAccessKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
          region: us-west-2
          serviceName: lambda
      - name: envoy.filters.http.upstream_codec
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
- clusterType:
    name: envoy.clusters.dns
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
      allAddressesInSingleEndpoint: true
      dnsLookupFamily: V4_PREFERRED
  connectTimeout: 5s
  loadAssignment:
    clusterName: backend_gwtest_lambda-local-integration_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: staging.localstack.dev
              portValue: 4566
  name: backend_gwtest_lambda-local-integration_0
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      commonHttpProtocolOptions:
        idleTimeout: 30s
      explicitHttpConfig:
        http2ProtocolOptions: {}
      httpFilters:
      - name: envoy.filters.http.aws_lambda
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.Config
          arn: arn:aws:lambda:us-west-2:000000000000:function:integration-service:$LATEST
          hostRewrite: staging.localstack.dev:4566
      - name: envoy.filters.http.aws_request_signing
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
          credentialProvider:
            inlineCredential:
              accessKeyId: AKIAIOSFODNN7EXAMPLE
              secretAccessKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
          region: us-west-2
          serviceName: lambda
      - name: envoy.filters.http.upstream_codec
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
- clusterType:
    name: envoy.clusters.dns
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
      allAddressesInSingleEndpoint: true
      dnsLookupFamily: V4_PREFERRED
  connectTimeout: 5s
  loadAssignment:
    clusterName: backend_gwtest_lambda-orders-backend_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: lambda.us-east-1.amazonaws.com
              portValue: 443
  name: backend_gwtest_lambda-orders-backend_0
  transportSocket:
    name: envoy.transport_sockets.tls
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      sni: lambda.us-east-1.amazonaws.com
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      commonHttpProtocolOptions:
        idleTimeout: 30s
      explicitHttpConfig:
        http2ProtocolOptions: {}
      httpFilters:
      - name: envoy.filters.http.aws_lambda
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.Config
          arn: arn:aws:lambda:us-east-1:000000000000:function:orders-service:$LATEST
          hostRewrite: lambda.us-east-1.amazonaws.com
      - name: envoy.filters.http.aws_request_signing
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
          credentialProvider:
            inlineCredential:
              accessKeyId: AKIAIOSFODNN7EXAMPLE
              secretAccessKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
          region: us-east-1
          serviceName: lambda
      - name: envoy.filters.http.upstream_codec
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
- clusterType:
    name: envoy.clusters.dns
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
      allAddressesInSingleEndpoint: true
      dnsLookupFamily: V4_PREFERRED
  connectTimeout: 5s
  loadAssignment:
    clusterName: backend_gwtest_lambda-products-backend_0
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: lambda.us-east-1.amazonaws.com
              portValue: 443
  name: backend_gwtest_lambda-products-backend_0
  transportSocket:
    name: envoy.transport_sockets.tls
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      sni: lambda.us-east-1.amazonaws.com
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      commonHttpProtocolOptions:
        idleTimeout: 30s
      explicitHttpConfig:
        http2ProtocolOptions: {}
      httpFilters:
      - name: envoy.filters.http.aws_lambda
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_lambda.v3.Config
          arn: arn:aws:lambda:us-east-1:000000000000:function:products-service:$LATEST
          hostRewrite: lambda.us-east-1.amazonaws.com
          invocationMode: ASYNCHRONOUS
      - name: envoy.filters.http.aws_request_signing
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
          region: us-east-1
          serviceName: lambda
      - name: envoy.filters.http.upstream_codec
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
- commonLbConfig:
    zoneAwareLbConfig:
      routingEnabled: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_kubernetes_443
  type: EDS
listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
routes:
- ignorePortInHostMatching: true
  name: listener~8080
  virtualHosts:
  - domains:
    - multi-lambda.example.com
    name: listener~8080~multi-lambda_example_com
    routes:
    - match:
        pathSeparatedPrefix: /products
      name: listener~8080~multi-lambda_example_com-route-0-httproute-route-to-multiple-lambdas-gwtest-2-0-matcher-0
      route:
        cluster: backend_gwtest_lambda-products-backend_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /orders
      name: listener~8080~multi-lambda_example_com-route-1-httproute-route-to-multiple-lambdas-gwtest-1-0-matcher-0
      route:
        cluster: backend_gwtest_lambda-orders-backend_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /local
      name: listener~8080~multi-lambda_example_com-route-2-httproute-route-to-multiple-lambdas-gwtest-3-0-matcher-0
      route:
        cluster: backend_gwtest_lambda-local-integration_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    - match:
        pathSeparatedPrefix: /auth
      name: listener~8080~multi-lambda_example_com-route-3-httproute-route-to-multiple-lambdas-gwtest-0-0-matcher-0
      route:
        cluster: backend_gwtest_lambda-auth-backend_0
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
